Since we potentially split segments into different regions, we need to consider that when filling in the text and data ranges of the image info. This fixes #5361 and #5351, caused by libtracker.so not finding its own image.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35407 a95241bf-73f2-0310-859d-f6bbb57e9c96